<resources>
    <string name="app_name">Rent Car</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="sign">SIGN</string>
    <string name="in">IN</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="email">Email</string>
    <string name="password">PASSWORD</string>
    <string name="password_small">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="didn_t_have_any_account">Didn’t have any account?</string>
    <string name="sign_up">Sign UP</string>
    <string name="join_carrental_to_book_your_dream_car">Join CarRental to book your dream car</string>
    <string name="account">ACCOUNT</string>
    <string name="create">CREATE</string>
    <string name="join_carrental">JOIN CARRENTAL</string>
    <string name="security">SECURITY</string>
    <string name="please_enter_your_new_password">Please enter your new password.</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="gallery">Gallery</string>
    <string name="explore_fleet">Explore Fleet</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="please_check_your_email">. Please check your email.</string>
    <string name="ram_gmail_com">ram@gmail.com</string>
    <string name="we_ve_sent_password_reset_to_link_to">We\'ve sent password reset to link to</string>
    <string name="email_sent">EMAIL SENT!</string>
    <string name="sent_reset_link">SENT RESET LINK</string>
    <string name="account_setting">Account Setting</string>
    <string name="manage_your_personal_information_and_preferences">Manage your personal information and preferences.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="my_booking">My Booking</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="change_photo">Change Photo</string>
    <string name="first_name">First Name</string>
    <string name="johan">Johan</string>
    <string name="last_name">Last Name</string>
    <string name="patel">Patel</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="_65656_56565">65656 56565</string>
    <string name="johanpatel123_gmail_com">johanpatel123@gmail.com</string>
    <string name="location">LOCATION</string>
    <string name="surat_gujarat">Surat, Gujarat</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo">todo</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="booking_details">Booking Details</string>
    <string name="bentley_continental_gt">Bentley Continental GT</string>
    <string name="_135c4e">135C4E</string>
    <string name="customer_name">CUSTOMER NAME</string>
    <string name="ram">RAM</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="_900">$900</string>
    <string name="return_date">RETURN DATE</string>
    <string name="_4_6_2026">4/6/2026</string>
    <string name="transmission">TRANSMISSION</string>
    <string name="automatic">Automatic</string>
    <string name="status">STATUS</string>
    <string name="completed">COMPLETED</string>
    <string name="pickup_date">PICKUP DATE</string>
    <string name="_4_5_2026">4/5/2026</string>
    <string name="fuel_type">FUEL TYPE</string>
    <string name="petrol">Petrol</string>
    <string name="seating">SEATING</string>
    <string name="_4_people">4 People</string>
    <string name="lamborghini_hurac_n_evo123">Lamborghini Huracán EVO123</string>
    <string name="total_amount">Total Amount</string>
    <string name="_4_24_2026">4/24/2026</string>
</resources>