<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.auth.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/general_sans_medium"
            android:includeFontPadding="false"
            android:text="@string/welcome_back"
            android:textColor="@color/orange"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/general_sans_medium"
                android:includeFontPadding="false"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="@dimen/_35ssp" />

            <com.example.rentcar.view.OutlineTextView
                android:id="@+id/imageView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/in"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_35ssp"
                app:outlineColor="@color/orange"
                app:outlineWidth="0.7" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/general_sans_medium"
            android:includeFontPadding="false"
            android:text="@string/sign_in_to_your_account"
            android:textSize="@dimen/_9ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/bg_login_card"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/general_sans_regular"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:text="@string/email_address"
                    android:textColor="@color/themeLightText"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/general_sans_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/_6sdp"
                    android:textColor="@color/themeLightText"
                    android:textColorHint="@color/themeLightText"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/general_sans_regular"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/themeLightText"
                    android:textSize="@dimen/_10ssp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edit_text_bg"
                    android:paddingHorizontal="@dimen/_6sdp">

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:autofillHints="password"
                        android:background="@null"
                        android:fontFamily="@font/general_sans_regular"
                        android:hint="@string/password_small"
                        android:inputType="textPassword"
                        android:textColor="@color/themeLightText"
                        android:textColorHint="@color/themeLightText"
                        android:textSize="@dimen/_14ssp" />

                    <ImageView
                        android:id="@+id/icPassword"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:src="@drawable/ic_eye_hide" />

                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        app:buttonTint="@color/checkbox" />

                    <TextView
                        android:id="@+id/textRemember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/general_sans_regular"
                        android:gravity="end"
                        android:text="@string/remember_me"
                        android:textColor="@color/themeLightText"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/general_sans_regular"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/icLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/ic_button"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:indeterminateTint="@color/themeColor"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/general_sans_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/border" />

            <LinearLayout
                android:id="@+id/IcRegisterNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/general_sans_regular"
                        android:includeFontPadding="false"
                        android:text="@string/didn_t_have_any_account"
                        android:textColor="#A1A1A1"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/btnSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/general_sans_regular"
                        android:includeFontPadding="false"
                        android:text="@string/sign_up"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>