<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/bg_login_card"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_circle_orange"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:src="@drawable/ic_success"
                app:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/generalsans_semibold"
            android:includeFontPadding="false"
            android:text="@string/email_sent"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/generalsans_regular"
            android:text="@string/we_ve_sent_password_reset_to_link_to"
            android:textColor="@color/themeLightText"
            android:textSize="@dimen/_11ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/generalsans_medium"
                android:includeFontPadding="false"
                android:text="@string/ram_gmail_com"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/generalsans_regular"
                android:includeFontPadding="false"
                android:text="@string/please_check_your_email"
                android:textColor="@color/themeLightText"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/ic_button"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:indeterminateTint="@color/themeColor"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/generalsans_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/back_to_login"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>



    </LinearLayout>
</RelativeLayout>